--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -52,30 +52,17 @@
     }
 
 // .card:hover .card__side - when hover card effect occur
-
-    @include respond(all-but-phone) {
-        &:hover &__side--front {
+        &:hover &__side--front,
+        &:active &__side--front {
             -webkit-transform: rotateY(-180deg);
             transform: rotateY(-180deg);
         }
-        &:hover &__side--back {
-            -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-        }
-    }
 
-    @include respond(phone) {
-        &:active &__side--front,
-        &:hover &__side--front {
-            -webkit-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
-        }
-        &:active &__side--back,
-        &:hover &__side--back {
+        &:hover &__side--back,
+        &:active &__side--back {
             -webkit-transform: rotateY(0);
             transform: rotateY(0);
         }    
-    } 
 
     // FRONT SIDE STYLING
     &__img {
